# ext-jel2

./: README.md  build.py
.github/workflows/: ci.yml
jel2/: #Makefile.am#  Makefile.am  Makefile.in  README.md  configure  configure.ac  setup.py
jel2/autom4te.cache/: output.0  requests  traces.0  traces.1
jel2/diffs/: configure  ecc.h  ijel.h  install-sh  jel.h  unwedge.c  wcap.c  wedge.c
jel2/include/: JELWedge.h  PluginCommsTwoSixCore.h  RACEJel.h  RCObj.h  jel-wedge-priv.h  jel-wedge.h
jel2/include/jel/: #jel.h#  ijel-ecc.h  ijel.h  jel.h  jel_wrap.c  jpeg-mem-dst.h  jpeg-mem-src.h  jpeg-stdio-dst.h  pyjel.py
jel2/include/rscode/: ecc.h
jel2/jpeg-6b/: Makefile  cjpeg  config.status  djpeg  jconfig.h  jpegtran  rdjpgcom  wrjpgcom
jel2/libjel/: ijel-ecc.c  ijel-inferno.c  ijel-local.c  ijel-old.c  ijel.c  ijel.c.2  jel.c  jel_bs.c  jpeg-mem-dst.c  jpeg-mem-src.c  jpeg-stdio-dst.c  jpeg-stdio-src.c
jel2/libjel/attic/: ijel-v1.c  ijel-v2.c  ijel-v3.c
jel2/rscode/: berlekamp.c  rs.c
jel2/utils/: energy.c  jdump.c  jquant.c  unloop.c  unwedge.c  wcap.c  wedge.c
